New snippet for what_we_do section - Header added to page

--- a/app/views/pages/what_we_do.liquid
+++ b/app/views/pages/what_we_do.liquid
@@ -1,7 +1,23 @@
 {% extends index %}
 
+{% block 'header' %}
+
+  <div class="header">
+    <div class="jumbotron" id="section-why-choose">
+      <div class="container">
+        {% include 'topmenu' %}
+      </div>
+
+      <div class="container">
+        {% include 'what_we_do' %}
+      </div>
+    </div>
+  </div>
+
+{% endblock %}
+
 {% block 'main' %}
 
-  TODO: Spirit
+  TODO : SPIRIT
 
 {% endblock %}
