--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -21,13 +21,16 @@
     {% inline_editor %}
   </head>
   <body>
-    <div id="top"></div>    
 
-    <div class="container">
+    <div id="top"></div>
+    
+    {% block 'header' %}
 
-      {% include 'topmenu' %}
+      <div class="container">
+        {% include 'topmenu' %}
+      </div>
       
-    </div>
+    {% endblock %}
 
     {% block 'main' %}
       
@@ -69,47 +72,8 @@
       </div>
 
       <div class="jumbotron" id="section-why-choose">
-        <div class="container">
-          <div class="row">
-            <div class="span4 center">
-              {{ "air-liquide-screenshot.png" | theme_image_tag }}
-            </div>
-            <div class="span5">
-              <h2>
-              {% editable_short_text "why_choose_applidget_title", hint: "Why choose Applidget", priority: 97 %}
-                <span class="light-orange">Why choose</span> <span class="bold-grey">Applidget?</span>
-              {% endeditable_short_text %}
-              </h2>
-              <p>
-              {% editable_long_text "why_choose_applidget_description", hint: "Why choose Applidget Description", priority: 96 %}
-                Quibus ita sceleste patratis Paulus cruore perfusus reversusque ad principis castra multos coopertos paene catenis adduxit in squalorem deiectos atque maestitiam, quorum adventu intendebantur eculei uncosque parabat carnifex et tormenta. et ex is proscripti sunt plures actique in exilium alii, non nullos gladii consumpsere poenales.
-                <br /><br />
-                Nec enim quisquam facile meminit sub Constantio, ubi susurro tenus haec movebantur, quemquam absolutum.
-              {% endeditable_long_text %}
-              </p>
-            </div>
-            <div class="span3">
-              <div class="white-glow-right">
-                <span class="specialties">
-                  {% editable_short_text "specialties_title", hint: "Our Specialties", priority: 94 %}
-                    Our specialties:
-                  {% endeditable_short_text %}
-                </span>                
-                {% editable_long_text "specialties_list", hint: "Specialties List", priority: 93 %}
-                <ul>
-                  <li>Ruby on Rails</li>
-                  <li>HTML5</li>
-                  <li>iOS</li>
-                  <li>Android</li>
-                </ul>
-                {% endeditable_long_text %}
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+        {% include 'what_we_do' %}
       </div>
-
 
       <div class="jumbotron" id="section-technologies">
         {% include 'technologies' %}
