main page integrated

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -27,9 +27,10 @@
     {% block 'header' %}
 
       <div class="container">
+        {% assign url = 'applidget-logo/red.png' %}
         {% include 'topmenu' %}
       </div>
-      
+
     {% endblock %}
 
     {% block 'main' %}
