--- a/app/views/snippets/what_we_do.liquid
+++ b/app/views/snippets/what_we_do.liquid
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="span4 center">
+    <div class="span4 center hidden-phone">
       {{ "air-liquide-screenshot.png" | theme_image_tag }}
     </div>
     <div class="span5">
