--- a/app/views/pages/what_we_do.liquid
+++ b/app/views/pages/what_we_do.liquid
@@ -5,6 +5,7 @@
   <div class="header">
     <div class="jumbotron" id="section-why-choose">
       <div class="container">
+        {% assign url = 'applidget-logo/blue.png' %}
         {% include 'topmenu' %}
       </div>
 
@@ -18,6 +19,80 @@
 
 {% block 'main' %}
 
-  TODO : SPIRIT
+  <div class="container" id="main-why-choose">
+    <div class="row">
+      <div class="span12">
+        <div class="row">
+          <div class="span7">
+            <div class="bloc-header">
+              <span class="bloc-illustration">{{ 'icon-imac-medium.png' | theme_image_tag }}</span>
+              <span class="bloc-title">Online App</span><br />
+              <span class="bloc-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+            </div>
+
+            <div class="bloc-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
+            </div>
+          </div>
+          <div class="span5 hidden-phone align-right">
+            {{ 'illustration_1.png' | theme_image_tag }}
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="span12">
+        <div class="row">
+          <div class="span5 hidden-phone align-left">
+            {{ 'illustration_2.png' | theme_image_tag }}
+          </div>
+
+          <div class="span7">
+            <div class="bloc-header">
+              <span class="bloc-illustration">{{ 'icon-iphone-medium.png' | theme_image_tag }}</span>
+              <span class="bloc-title">iPhone App</span><br />
+              <span class="bloc-subtitle">Excepteur sint occaecat cupidatat.</span>
+            </div>
+
+            <div class="bloc-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="span12">
+        <div class="row">
+          <div class="span7">
+            <div class="bloc-header">
+              <span class="bloc-illustration">{{ 'icon-ipad-medium.png' | theme_image_tag }}</span>
+              <span class="bloc-title">iPad App</span><br />
+              <span class="bloc-subtitle">Duis aute irure dolor in.</span>
+            </div>
+
+            <div class="bloc-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
+            </div>
+          </div>
+
+          <div class="span5 hidden-phone align-right">
+            {{ 'illustration_3.png' | theme_image_tag }}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
