--- a/app/views/snippets/topmenu.liquid
+++ b/app/views/snippets/topmenu.liquid
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
       </button>
       <a href="./" class="brand">
-        {{ "applidget-logo/red.png" | theme_image_tag: "alt:Applidget" }}
+        {{url | theme_image_tag: "alt:Applidget" }}
       </a>
       <div class="nav-collapse collapse">
         {% nav site, class: 'nav', active_class: 'active', bootstrap: true %}
