--- a/app/views/pages/what_we_do.liquid
+++ b/app/views/pages/what_we_do.liquid
@@ -20,41 +20,32 @@
 {% block 'main' %}
 
   <div class="container" id="main-why-choose">
-    {% if contents.projects.size > 0 %}
+
+    {% with_scope published: true %}
 
       {% for project in contents.projects %}
 
-        {% if project.published %}
-
         <div class="row">
           <div class="span12">
-            <div class="row">
-              <div class="span7">
-                <div class="bloc-header">
-                  <span class="bloc-illustration">{{ project.icon.url | image_tag }}</span>
-                  <span class="bloc-title">{{ project.title }}</span><br />
-                  <span class="bloc-subtitle">{{ project.subtitle }}</span>
-                </div>
-                <div class="bloc-description">
-                  {{ project.body }}
-                </div>
-              </div>
-              <div class="span5 hidden-phone align-right">
-                {{ project.picture.url | image_tag }}
-              </div>
+            <div class="bloc-illustration {% cycle 'picture_style': 'picture-right', 'picture-left' %}">
+              {{ project.picture.url | image_tag }}
+            </div>
+
+            <div class="bloc-header">
+              <span class="bloc-icon">{{ project.icon.url | image_tag }}</span>
+              <span class="bloc-title">{{ project.title }}</span><br />
+              <span class="bloc-subtitle">{{ project.subtitle }}</span>
+            </div>
+
+            <div class="bloc-description">
+              {{ project.body }}
             </div>
           </div>
         </div>
 
-        {% endif %}
-
       {% endfor %}
 
-    {% else %}
-
-      <h3>No project</h3>
-
-    {% endif %}
+    {% endwith_scope %}
 
   </div>
 
