--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -14,8 +14,6 @@ body {
 .padding20 { padding: 20px; }
 .marginTop20 { margin-top: 20px; }
 .inline-to-block { display: inline; }
-.align-right { text-align: right; }
-.align-left { text-align: left; }
 
 $icon-classes-list: (email, phone, company, position, twitter, facebook, linkedin);
 $icon-center-classes-list: (team, suitcase, tv, email-medium, phone-medium, location-medium, heart-medium);
@@ -85,6 +83,16 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
   #section-why-choose {
     padding-top: 0;
   }
+}
+
+.picture-right {
+  float: right;
+  margin-left: 20px;
+}
+
+.picture-left {
+  float: left;
+  margin-right: 20px;
 }
 
 // Top navigation menu
@@ -496,13 +504,6 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
     border-bottom: 1px solid #D8D8D8;
   }
 
-  .span5 {
-    display: table-row;
-    img {
-      vertical-align: bottom;
-    }
-  }
-
   .row:last-child {
     .span12 {
       border-bottom: none;
@@ -516,6 +517,13 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
   }
 
   .bloc-illustration {
+    display: table-row;
+    width: 380px;
+
+    img { vertical-align: bottom; }
+  }
+
+  .bloc-icon {
     display: block;
     float: left;
     height: 65px;
@@ -540,7 +548,6 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
     color: #707070;
     font-size: 0.8em;
     line-height: 1.8em;
-    display: inline-block;
     padding-top: 15px;
     padding-bottom: 30px;
   }
@@ -634,9 +641,25 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
       min-height: 330px;
     }
   }
+
+  #main-why-choose {
+    .bloc-illustration {
+      width: 290px;
+    }
+  }
 }
 
 @media (max-width: 767px) {
+  .picture-right {
+    float: none;
+    margin-left: 0px;
+  }
+
+  .picture-left {
+    float: none;
+    margin-right: 0px;
+  }
+
   #main-navbar {
     .brand {
       margin-left: -10px; // Align applidget logo to the left side of the grid.
@@ -773,6 +796,13 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
   #main-why-choose {
     margin-left: 20px;
     margin-right: 20px;
+
+    .bloc-illustration {
+      display: block;
+      width: 100%;
+      margin-bottom: 20px;
+      text-align: center;
+    }
   }
 }
 
