--- a/app/views/pages/what_we_do.liquid
+++ b/app/views/pages/what_we_do.liquid
@@ -27,12 +27,16 @@
 
         <div class="row">
           <div class="span12">
+            {% if project.picture.url %}
             <div class="bloc-illustration {% cycle 'picture_style': 'picture-right', 'picture-left' %}">
               {{ project.picture.url | image_tag }}
             </div>
+            {% endif %}
 
             <div class="bloc-header">
+              {% if project.icon.url %}
               <span class="bloc-icon">{{ project.icon.url | image_tag }}</span>
+              {% endif %}
               <span class="bloc-title">{{ project.title }}</span><br />
               <span class="bloc-subtitle">{{ project.subtitle }}</span>
             </div>
