--- a/app/views/snippets/event_solutions.liquid
+++ b/app/views/snippets/event_solutions.liquid
@@ -14,7 +14,7 @@
 
   <div class="row">
     <div class="span6 info-bloc mobicheckin-bloc img-left">
-      <div class="padding20">
+      <div class="padded">
         <!-- This content is supposed to be loaded from a collection in the end -->
         {{ "mobicheckin-icon.png" || theme_image_tag }}
         <span class="bloc-title">MobiCheckin</span>
@@ -35,7 +35,7 @@
     </div>
 
     <div class="span6 info-bloc mobinetwork-bloc img-right">
-      <div class="padding20">
+      <div class="padded">
         <!-- This content is supposed to be loaded from a collection in the end -->
         {{ "mobinetwork-icon.png" || theme_image_tag }}
         <span class="bloc-title">MobiNetwork</span>
@@ -55,7 +55,11 @@
     </div>
   </div>
 
-  <div class="row marginTop20">
+  <div class="row">
+    <div class="spacer"></div>
+  </div>
+
+  <div class="row">
     <div class="span8">
       <div class="business-card">
         <h3>
