--- a/app/views/snippets/team.liquid
+++ b/app/views/snippets/team.liquid
@@ -17,7 +17,7 @@
 
   <div class="row">
     <div class="span4 info-bloc">
-      <div class="padding20">
+      <div class="padded">
         <span class="bloc-title">
           {% editable_short_text "our_team_title", hint: "Our Team Title", priority: 68 %}
             Our Team
@@ -35,7 +35,7 @@
     </div>
 
     <div class="span4 info-bloc">
-      <div class="padding20">
+      <div class="padded">
         <span class="bloc-title">
           {% editable_short_text "join_us_title", hint: "Join Us Title", priority: 66 %}
             Join Us
@@ -53,7 +53,7 @@
     </div>
 
     <div class="span4 info-bloc">
-      <div class="padding20">
+      <div class="padded">
         <span class="bloc-title">
           {% editable_short_text "last_open_positions_title", hint: "Last Open Positions Title", priority: 64 %}
             Last Open Positions
