--- a/app/views/snippets/technologies_description.liquid
+++ b/app/views/snippets/technologies_description.liquid
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="span4">
-      <div class="padding20">
+      <div class="padded">
         <span class="section-title">
           {% editable_short_text "technologies_bloc_1_title", hint: "Technologies Bloc 1 Title", priority: 87 %}
             We focus on:
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="span4">
-      <div class="padding20">
+      <div class="padded">
         <span class="section-title">
           {% editable_short_text "technologies_bloc_2_title", hint: "Technologies Bloc 2 Title", priority: 85 %}
             We are Applidget
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="span4">
-      <div class="padding20">
+      <div class="padded">
         <span class="section-title">
           {% editable_short_text "technologies_bloc_3_title", hint: "Technologies Bloc 3 Title", priority: 83 %}
             What they're saying
