--- a/app/views/snippets/blogs.liquid
+++ b/app/views/snippets/blogs.liquid
@@ -17,7 +17,7 @@
 
   <div class="row">
     <div class="span4 info-bloc suitcase-bloc">
-      <div class="padding20">
+      <div class="padded">
         <span class="bloc-title">
           {% editable_short_text "biz_blog_title", hint: "Biz Blog Title", priority: 59 %}
             Biz Blog
@@ -41,7 +41,7 @@
     </div>
 
     <div class="span4 info-bloc tv-bloc">
-      <div class="padding20">
+      <div class="padded">
         <span class="bloc-title">
           {% editable_short_text "geek_blog_title", hint: "Geek Blog Title", priority: 56 %}
             Geek Blog
@@ -65,7 +65,7 @@
     </div>
 
     <div class="span4 info-bloc social-networks-bloc">
-      <div class="padding20">
+      <div class="padded">
         <span class="bloc-title">
           {% editable_short_text "follow_us_title", hint: "Follow Us Title", priority: 53 %}
             Follow Us
