CSS Integration of technologies contents done

--- a/app/views/pages/what_we_do.liquid
+++ b/app/views/pages/what_we_do.liquid
@@ -19,7 +19,7 @@
 
 {% block 'main' %}
 
-  <div class="container" id="main-why-choose">
+  <div class="container page" id="main-why-choose">
 
     {% with_scope published: true %}
 
