--- a/app/views/pages/technologies.liquid
+++ b/app/views/pages/technologies.liquid
@@ -22,87 +22,45 @@
   </div>
 
   <div class="container page" id="main-technologies">
-    <div class="row">
-      <div class="span12">
-        <div class="bloc-text {% cycle 'text_style': 'pull-left', 'pull-right' %}">
 
-          <div class="bloc-header">
-            <span class="bloc-title">Ruby on Rails</span><br />
-            <span class="bloc-subtitle">Framework Ruby</span>
-          </div>
+    {% with_scope published: true %}
 
-          <div class="bloc-description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div>
-        </div>
+      {% for techno in contents.technologies %}
 
-        <div class="bloc-illustration {% cycle 'picture_style': 'picture-right', 'picture-left' %} center">
-          {{ 'illustration_4.jpg' | image_tag }}
-        </div>
+        <div class="row">
+          <div class="span12">
 
-        <div class="clear"></div>
+            {% if techno.picture.url %}
+              {% assign classText = "bloc-text" %}
+            {% else %}
+              {% assign classText= "" %}
+            {% endif %}
 
-      </div>
-    </div>
+            <div class="{{ classText }} {% cycle 'text_style': 'pull-left', 'pull-right' %}">
+              <div class="bloc-header">
+                <span class="bloc-title">{{ techno.name }}</span><br />
+                <span class="bloc-subtitle">{{ techno.subtitle }}</span>
+              </div>
 
-    <div class="row">
-      <div class="span12">
-        <div class="bloc-text {% cycle 'text_style': 'pull-left', 'pull-right' %}">
+              <div class="bloc-description">
+                {{ techno.body }}
+              </div>
+            </div>
 
-          <div class="bloc-header">
-            <span class="bloc-title">HTML 5</span><br />
-            <span class="bloc-subtitle">Framework Ruby</span>
-          </div>
+            {% if techno.picture.url %}
+            <div class="bloc-illustration {% cycle 'picture_style': 'picture-right', 'picture-left' %} center">
+              {{ techno.picture.url | image_tag }}
+            </div>
+            {% endif %}
 
-          <div class="bloc-description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <div class="clear"></div>
+
           </div>
         </div>
 
-        <div class="bloc-illustration {% cycle 'picture_style': 'picture-right', 'picture-left' %} center">
-          {{ 'illustration_5.png' | image_tag }}
-        </div>
+      {% endfor %}
 
-        <div class="clear"></div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="span12">
-        <div class="bloc-text {% cycle 'text_style': 'pull-left', 'pull-right' %}">
-
-          <div class="bloc-header">
-            <span class="bloc-title">Développement iOS</span><br />
-            <span class="bloc-subtitle">Framework Ruby</span>
-          </div>
-
-          <div class="bloc-description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div>
-        </div>
-
-        <div class="bloc-illustration {% cycle 'picture_style': 'picture-right', 'picture-left' %} center">
-          {{ 'illustration_6.png' | image_tag }}
-        </div>
-
-        <div class="clear"></div>
-      </div>
-    </div>
+    {% endwith_scope %}
   </div>
 
 {% endblock %}
