Page integration quite done

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -85,6 +85,7 @@
       </div>
 
       <div class="jumbotron" id="section-event-solutions">
+        {% assign show_content = true %}
         {% include 'event_solutions' %}
       </div>
 
