--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -65,7 +65,7 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
     font-size: 0.8em;
     line-height: 1.8em;
     padding-top: 15px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
   }
 
   .bloc-illustration {
@@ -127,11 +127,12 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
 
 .header {
   #section-why-choose,
-  #section-technologies {
+  #section-technologies,
+  #section-event-solutions {
     padding-top: 0;
   }
 
-  #section-technologies{
+  #section-technologies {
     h1 {
       margin-top: 0;
     }
@@ -338,11 +339,12 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
   h1 {
     text-align: left;
     color: #de0605;
-    margin-top: 55px;
+    margin-top: 40px;
   }
 
   .calendar {
     margin-bottom: 20px;
+    text-align: center;
   }
 
   .info-bloc {
@@ -513,7 +515,7 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
   background: #cccccc;
   color: #3d3d3d;
   text-shadow: 1px 0px 1px #FFFFFF;
-  margin-top: 40px;
+  padding-top: 40px;
   padding-bottom: 50px;
 
   h1 {
@@ -599,18 +601,38 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
   padding-top: 40px;
 }
 
-#main-technologies {
-  margin-top: 40px;
-  margin-bottom: 80px;
+#main-technologies,
+#main-event-solutions {
+  padding-top: 40px;
+  padding-bottom: 80px;
+  text-shadow: none;
+  border-top: 1px solid #f5f5f5;
 
   .span12 {
     border-top: 1px solid #D8D8D8;
     padding: 20px 0;
   }
+}
 
+#main-technologies {
   .bloc-title {
     color: #1053A6;
-  }  
+  }
+}
+
+#main-event-solutions {
+  background-color: #EAE4D6;
+
+  .bloc-title {
+    color: #DE0605;
+  }
+}
+
+@media(max-width: 980px) {
+  #main-technologies,
+  #main-event-solutions {
+    margin-top: 0;
+  }
 }
 
 @media(min-width: 980px) {
@@ -664,7 +686,7 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
     }
   }
 
-  #section-event-solutions {
+  #section-event-solutions {    
     .business-card {
       height: 200px;
       margin-bottom: 15px;
@@ -715,6 +737,20 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
     .bloc-text {
       display: block;
       width: 100%;
+    }
+
+    .bloc-buttons {
+       margin-bottom: 25px;
+      text-align: center;
+    }
+  }
+
+  .header {
+    #section-event-solutions {
+      h1 {
+        margin-top: 0;
+        margin-bottom: 25px;
+      }
     }
   }
 
@@ -775,8 +811,8 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
 
   #section-event-solutions {
     h1 {
-      margin-top: 22px;
       margin-bottom: 45px;
+      margin-top: 25px;
       text-align: center;
     }
 
@@ -868,9 +904,11 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
     margin-right: 20px;
   }
 
-  #main-technologies {
+  #main-technologies,
+  #main-event-solutions {
     padding-left: 20px;
     padding-right: 20px;
+    padding-top: 10px;
 
     .picture-right, .picture-left { text-align: center; }
   }
