current link added to read more link

--- a/app/views/snippets/event_solutions.liquid
+++ b/app/views/snippets/event_solutions.liquid
@@ -32,7 +32,7 @@
               </span>
 
               <span class="read-more">
-                <a href="event_solutions#{{ solution._permalink }}">
+                <a href="{{ locale }}/event_solutions#{{ solution._permalink }}">
                   {% editable_short_text "read_more_title", hint: "Read More", priority: 79 %}
                     Read More
                   {% endeditable_short_text %}
