Header integration done - New model added - content displayed

--- a/public/stylesheets/jumbotron.css.scss
+++ b/public/stylesheets/jumbotron.css.scss
@@ -19,6 +19,10 @@
   a, a:hover {
     color: inherit;
   }
+
+  a.list-info {
+    color: #636363;
+  }
   
   .container {
     position: relative;
