--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -16,7 +16,7 @@ body {
 .inline-to-block { display: inline; }
 .clear { clear: both; }
 
-$icon-classes-list: (email, phone, company, position, twitter, facebook, linkedin);
+$icon-classes-list: (email, phone, company, position, twitter, facebook, linkedin, github);
 $icon-center-classes-list: (team, suitcase, tv, email-medium, phone-medium, location-medium, heart-medium);
 $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase, tv);
 
@@ -74,6 +74,13 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
 
     img { vertical-align: bottom; }
   }
+
+  .large-border {
+    img {
+      border: 5px solid #FFFFFF;
+      @include box-shadow(0px 3px 7px #787878);
+    }
+  }
 }
   /*** End ***/
 
@@ -128,13 +135,29 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
 .header {
   #section-why-choose,
   #section-technologies,
-  #section-event-solutions {
+  #section-event-solutions,
+  #section-team {
     padding-top: 0;
   }
 
   #section-technologies {
     h1 {
       margin-top: 0;
+    }
+  }
+
+  #section-team {
+    margin-bottom: 0;
+
+    .headshots { 
+      margin-bottom: 0px;
+      text-align: center;
+    }
+
+    h1 {
+      margin-left: 2em;
+      margin-top: 45px;
+      text-align: left;
     }
   }
 }
@@ -460,7 +483,7 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
 }
 
 #section-team {
-  background: #e5e5e5 url('/images/team-bg.png') repeat-x top center;
+  background: #e5e5e5 url('/images/sunrise-effect-blue.png') repeat-x top center;
   margin-top: 0px;
   margin-bottom: 20px;
   text-shadow: 1px 1px 3px #707070;
@@ -602,7 +625,8 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
 }
 
 #main-technologies,
-#main-event-solutions {
+#main-event-solutions,
+#main-team {
   padding-top: 40px;
   padding-bottom: 80px;
   text-shadow: none;
@@ -614,7 +638,8 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
   }
 }
 
-#main-technologies {
+#main-technologies,
+#main-team {
   .bloc-title {
     color: #1053A6;
   }
@@ -628,9 +653,21 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
   }
 }
 
+#main-team {
+  .list-info {
+    padding-left: 1.5em;
+    margin-right: 1.5em;
+  }
+
+  .bloc-title {
+    color: #7b27a2;
+  }
+}
+
 @media(max-width: 980px) {
   #main-technologies,
-  #main-event-solutions {
+  #main-event-solutions,
+  #main-team {
     margin-top: 0;
   }
 }
@@ -746,10 +783,11 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
   }
 
   .header {
-    #section-event-solutions {
+    #section-event-solutions,
+    #section-team {
       h1 {
-        margin-top: 0;
-        margin-bottom: 25px;
+        margin: 0 0 25px;
+        text-align: center;
       }
     }
   }
@@ -905,7 +943,8 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
   }
 
   #main-technologies,
-  #main-event-solutions {
+  #main-event-solutions,
+  #main-team {
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 10px;
