--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -81,6 +81,13 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
       @include box-shadow(0px 3px 7px #787878);
     }
   }
+
+  .social-icon-list {
+    a {
+      display: inline-block;
+      margin-right: 10px;
+    }
+  }
 }
   /*** End ***/
 
@@ -155,7 +162,6 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
     }
 
     h1 {
-      margin-left: 2em;
       margin-top: 45px;
       text-align: left;
     }
@@ -778,6 +784,11 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
 
     .bloc-buttons {
        margin-bottom: 25px;
+      text-align: center;
+    }
+
+    .social-icon-list {
+      margin-bottom: 10px;
       text-align: center;
     }
   }
