Dynamic display of team on homepage with read more link

--- a/app/views/pages/team.liquid
+++ b/app/views/pages/team.liquid
@@ -37,7 +37,7 @@
 
         {% for person in contents.people %}
 
-          <div class="row" id="{{ team._permalink }}">
+          <div class="row" id="{{ person._permalink }}">
             <div class="span12">
 
               {% if person.picture.url %}
