--- a/app/views/snippets/team.liquid
+++ b/app/views/snippets/team.liquid
@@ -24,13 +24,22 @@
           {% endeditable_short_text %}
         </span>
 
-        <!-- This content is supposed to be loaded from a collection in the end -->
-        <span class="bloc-section-title team">Tristan Verdier</span>
-        <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+        {% with_scope homepage:true, published: true %}
+          {% for person in contents.people limit:2 %}
+            <span class="bloc-section-title team">
+              <a href="{{ locale }}/team#{{ person._permalink }}">{{ person.full_name }}</a>
+            </span>
+            <span class="bloc-section-description">{{ person.body | truncate:60 }}</span>
+          {% endfor %}
+        {% endwith_scope %}
 
-        <span class="bloc-section-title team">John Doe</span>
-        <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
-        <!-- End content -->
+        <span class="read-more">
+          <a href="{{ locale }}/team">
+            {% editable_short_text "read_more_title", hint: "Read More", priority: 67 %}
+              Read More
+            {% endeditable_short_text %}
+          </a>
+        </span>
       </div>
     </div>
 
