Soon added on homepage for blogs

--- a/app/views/snippets/blogs.liquid
+++ b/app/views/snippets/blogs.liquid
@@ -15,6 +15,8 @@
     </div>    
   </div>
 
+  <!--
+
   <div class="row">
     <div class="span4 info-bloc suitcase-bloc">
       <div class="padded">
@@ -24,7 +26,6 @@
           {% endeditable_short_text %}
         </span>
 
-        <!-- This content is supposed to be loaded from a collection in the end -->
         <span class="bloc-section-title suitcase">Title of the post</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
@@ -36,7 +37,6 @@
             Read More
           {% endeditable_short_text %}
         </span>
-        <!-- End content -->
       </div>
     </div>
 
@@ -48,7 +48,6 @@
           {% endeditable_short_text %}
         </span>
 
-        <!-- This content is supposed to be loaded from a collection in the end -->
         <span class="bloc-section-title tv">Title of the post</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
@@ -60,7 +59,6 @@
             Read More
           {% endeditable_short_text %}
         </span>
-        <!-- End content -->
       </div>
     </div>
 
@@ -72,13 +70,24 @@
           {% endeditable_short_text %}
         </span>
 
-        <!-- This content is supposed to be loaded from a collection in the end -->
         {% editable_long_text "social_networks_info", hint: "Social Networks Info", priority: 52 %}
           <span class="list-info twitter">@applidget</span><br />
           <span class="list-info facebook">/applidget</span><br />
           <span class="list-info linkedin">/applidget.in</span>
         {% endeditable_long_text %}
-        <!-- End content -->
+      </div>
+    </div>
+  </div>
+
+  -->
+
+  <!-- Bloc to be removed when blog page is implemented -->
+  <div id="temporary-main-blogs">
+    <div class="container page">
+      <div class="row">
+        <div class="span12">
+          SOON...
+        </div>
       </div>
     </div>
   </div>
