--- a/app/views/snippets/footer.liquid
+++ b/app/views/snippets/footer.liquid
@@ -32,9 +32,9 @@
           Go Social:
         {% endeditable_short_text %}
         <span class="inline-to-block medium-img">
-          {{ "icon-facebook-big-colored.png" | theme_image_tag }}
-          {{ "icon-twitter-big-colored.png" | theme_image_tag }}
-          {{ "icon-linkedin-big-colored.png" | theme_image_tag }}
+          <a href="https://www.facebook.com/applidget" target="_blank">{{ "icon-facebook-big-colored.png" | theme_image_tag }}</a>
+          <a href="https://twitter.com/Applidget" target="_blank">{{ "icon-twitter-big-colored.png" | theme_image_tag }}</a>
+          <a href="http://www.linkedin.com/company/1834366" target="_blank">{{ "icon-linkedin-big-colored.png" | theme_image_tag }}</a>
         </span>
       </span>
     </div>
