Fixed menu size for what we do page and put bootstrap JS back

--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -140,6 +140,12 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
 }
 
 .header {
+  #section-why-choose {
+    #main-navbar {
+      font-size: 1.3em;
+    }
+  }
+
   #section-why-choose,
   #section-technologies,
   #section-event-solutions,
