--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -112,7 +112,7 @@
     <!-- Le javascripts -->
     {{ 'jquery.min' | javascript_tag }}
     {{ 'jquery.anchor' | javascript_tag }}
-    
+    {{ 'bootstrap.min' | javascript_tag }}
     {{ 'application' | javascript_tag }}
   </body>
 </html>
