--- a/app/views/pages/event_solutions.liquid
+++ b/app/views/pages/event_solutions.liquid
@@ -23,44 +23,9 @@
 
       {% with_scope published: true %}
 
-        {% for solution in contents.solutions %}
+        {% for object in contents.solutions %}
 
-          <div class="row" id="{{ solution._permalink }}">
-            <div class="span12">
-
-              {% if solution.picture.url %}
-                {% assign classText = "bloc-text" %}
-              {% else %}
-                {% assign classText= "" %}
-              {% endif %}
-
-              <div class="{{ classText }} {% cycle 'text_style': 'pull-left', 'pull-right' %}">
-                <div class="bloc-header">
-                  <span class="bloc-title">{{ solution.name }}</span><br />
-                  <span class="bloc-subtitle">{{ solution.subtitle }}</span>
-                </div>
-
-                <div class="bloc-description">
-                  {{ solution.body }}
-                </div>
-                
-                <div class="bloc-buttons">
-                {% if solution.link_url %}
-                  <a href="{{ solution.link_url}}" class="btn btn-large btn-danger" target="_blank">{{ solution.link_text }}</a>
-                {% endif %}
-                </div>
-              </div>
-
-              {% if solution.picture.url %}
-              <div class="bloc-illustration {% cycle 'picture_style': 'picture-right', 'picture-left' %} center">
-                {{ solution.picture.url | image_tag }}
-              </div>
-              {% endif %}
-
-              <div class="clear"></div>
-
-            </div>
-          </div>
+          {% include 'page_content' %}
 
         {% endfor %}
 
