--- a/app/views/pages/technologies.liquid
+++ b/app/views/pages/technologies.liquid
@@ -26,38 +26,9 @@
 
       {% with_scope published: true %}
 
-        {% for techno in contents.technologies %}
+        {% for object in contents.technologies %}
 
-          <div class="row">
-            <div class="span12">
-
-              {% if techno.picture.url %}
-                {% assign classText = "bloc-text" %}
-              {% else %}
-                {% assign classText= "" %}
-              {% endif %}
-
-              <div class="{{ classText }} {% cycle 'text_style': 'pull-left', 'pull-right' %}">
-                <div class="bloc-header">
-                  <span class="bloc-title">{{ techno.name }}</span><br />
-                  <span class="bloc-subtitle">{{ techno.subtitle }}</span>
-                </div>
-
-                <div class="bloc-description">
-                  {{ techno.body }}
-                </div>
-              </div>
-
-              {% if techno.picture.url %}
-              <div class="bloc-illustration {% cycle 'picture_style': 'picture-right', 'picture-left' %} center">
-                {{ techno.picture.url | image_tag }}
-              </div>
-              {% endif %}
-
-              <div class="clear"></div>
-
-            </div>
-          </div>
+          {% include 'page_content' %}
 
         {% endfor %}
 
